--- a/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
@@ -26,7 +26,7 @@
                     <div class="wrapper-bordered alert alert-success" id="SuccessMessagediv">
                         <div class="row-fluid">
                             <div class="span12">
-                                <label id="lblSuccessMessage" class="success_message_color">@ViewBag.message</label>
+                                <label id="lblSuccessMessage" class="success_message_color" style="font-size:10pt">@ViewBag.message</label>
                             </div>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                                 <div class="wrapper-bordered">
                                     <div class="row-fluid">
                                         <div class="span12 alert-error alert" id="errorMessageDiv">
-                                            <label id="lblErrorMessage" class="error_message_color">@ViewBag.message</label>
+                                            <label id="lblErrorMessage" class="error_message_color" style="font-size:10pt">@ViewBag.message</label>
                                         </div>
                                     </div>
                                 </div>
