--- a/MiraiConsultMVC/Views/User/ResetPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ResetPassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@model MiraiConsultMVC.Models.User.ResetPassword
+@Scripts.Render("~/bundles/jqueryval")
 <div class="row-fluid">
     <div class="custom-center-small-div span7">
         <div class="row-fluid">
@@ -14,7 +15,7 @@
                     @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                     {
                         <div id="message" class="alert alert-success">
-                            <label id="lblError">@ViewBag.errorMsg</label>
+                            <label id="lblError" class="success_message_color">@ViewBag.errorMsg</label>
                         </div>
                     }
                 </div>
@@ -32,7 +33,7 @@
                     </div>
                     <div class="span8  btn-padding-left controls-right-padding">
                         <div>
-                            @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border", type = "password", maxlength = "30", placeholder = "New Password" })
+                            @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "New Password" })
                             @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
                         </div>
                     </div>
@@ -47,7 +48,7 @@
                         </label>
                     </div>
                     <div class="span8  btn-padding-left controls-right-padding">
-                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border", type = "password", maxlength = "30", placeholder = "Confirm Password" })
+                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm Password" })
                         @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
                     </div>
                 </div>
