Committing changes of mira 507

--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -120,7 +120,7 @@
                                                 <label class="cust-font-style">Photo:</label>
                                             </div>
                                             <div class="span8">
-                                                <input type="file" name="file" id="Image" value="@Model.Image" maxlength="256" style="width: 100%;">
+                                                <input type="file" name="file" id="Image" value="@Model.Image" maxlength="256" style="width: 100%;"><br />
                                                 <span id="ImageValidation" class="field-validation-error validation-summary-errors" data-valmsg-for="Image" data-valmsg-replace="true"></span>
                                             </div>
                                         </div>
