--- a/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
+++ b/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
@@ -9,7 +9,7 @@
             @if (Model != null && Model.Count() != 0)
             {
                  foreach(QuestionModel question in Model)
-    {
+                {
            
             <div class='row-fluid'>
                 <div class="span12 custom-yellow-container">
@@ -39,17 +39,17 @@
                     </p>
                 </div>
             </div>
-            } 
-            <div class='row-fluid'>
-                <div class="span12">
-                    <hr class='hr_color' />
-                </div>
-            </div>
+                }
             }
             else
             {
-            <span>No activities yet</span>
-            }
+            <div class='row-fluid'>
+                <div class="span12">
+                    @*<hr class='hr_color' />*@
+                    <span>No activities yet</span>
+                </div>
+            </div>  
+            }        
         </div>
     </div>
 </div>
