Fixed ask doctor textbox should not accept whitespace

--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -91,7 +91,7 @@
     });
     $("#btnNext").click(function () {
         var questionText = document.getElementById('txtAreaQuestion').value;
-        if (questionText == null || questionText == '') {
+        if (questionText.trim() == null || questionText.trim() == "") {
             document.getElementById('lblValidation').style.display = 'block';
             document.getElementById('lblValidation').innerHTML = "Please Enter Question";
             return true;
