--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -143,7 +143,10 @@
                                                 <li id="liDocQuestions">
                                                     <a href="/Questions/DoctorQuestionList">
                                                         <span class="Icon Icon--questions Icon--large"></span>
+                                                        @if (Convert.ToInt32(@Session["UnQuestionCount"])!= 0)
+                                                        { 
                                                         <span id="unansweredQuestionCount" title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
+                                                        }
                                                         <span class="rightpaddingdiv text"><br />Questions</span>
                                                     </a>
                                                 </li>
