--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -102,7 +102,7 @@
                         <label class="control-label"></label>
                         <div class="controls">
                             <button type="button" onclick="btnAssign_Click()" class="btn thanx btnAssign" style="display: inline-block !important;">Assign</button>
-                            <button type="button" onclick="btnCancel_Click()" class="btn cancel" style="display: inline-block !important;">Cancel</button>
+                            <button type="button" onclick='btnCancel_Click()' class="btn cancel" style="display: inline-block !important;">Cancel</button>
                         </div>
                     </div>
                 </div>
@@ -258,7 +258,8 @@
             contentType: 'application/json',
             url: '/admin/AssignDoctor?QuestionId=' + document.getElementById('hdnQuestionId').value + '&AssignDoctorIds=' + doctorIds.join(","),
             success: function (response) {
-                var ListOfDoctors = '<table cellpadding="0" cellspacing="0" border="0" class="custom-table zebra-striped"' +
+                location.reload(true);
+              /*  var ListOfDoctors = '<table cellpadding="0" cellspacing="0" border="0" class="custom-table zebra-striped"' +
                   'id="assign-doctor-list" width="100%">' +
                '<thead>' +
                    '<tr>'+
@@ -299,7 +300,7 @@
                 ListOfDoctors = ListOfDoctors + TextToAppend + '</tbody>' + '</table>'
 
                 $("#divToReplace").empty();
-                $("#divToReplace").append(ListOfDoctors);
+                $("#divToReplace").append(ListOfDoctors);*/
             },
             error: function (data) {
                 alert("Error occured");
