committing mira-555 doctor signup detail not display in admin edit control

--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -102,7 +102,7 @@
                         <label class="control-label"></label>
                         <div class="controls">
                             <button type="button" onclick="btnAssign_Click()" class="btn thanx btnAssign" style="display: inline-block !important;">Assign</button>
-                            <button type="button" onclick='btnCancel_Click()' class="btn cancel" style="display: inline-block !important;">Cancel</button>
+                            <button type="button" onclick="btnCancel_Click()" class="btn cancel" style="display: inline-block !important;">Cancel</button>
                         </div>
                     </div>
                 </div>
