--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionList.cshtml
@@ -36,8 +36,16 @@
             </div>
         </div>
         <br />
-
-        @Html.Partial("_DoctorQuestionList", Model);
+        @if(Model.FirstOrDefault().QuestionId != 0)
+        { 
+            @Html.Partial("_DoctorQuestionList", Model);
+        }
+        else
+        {
+            <div class="margin_bottom">
+                <span>No records found</span>
+            </div>
+        }
     </div>
 </div>
 <script type="text/javascript">
