Fixed UI issue of menu

--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -122,12 +122,12 @@
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
                                                     <a href="/Patients/Myactivity">
-                                                        <span class="Icon Icon--my-activity Icon--large"></span><span class="text"><br />My Activity</span>
+                                                        <span class="Icon Icon--my-activity Icon--large" style="margin-top: 0px;"></span><span class="text"><br />My Activity</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFeed" class="feed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" style="margin-top: 0px;"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFindDoc" class="find-doctors">
@@ -140,12 +140,12 @@
                                             {
                                                 <li id="liDocFeed">
                                                     <a href="/Feed/doctorfeed">
-                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" style="margin-top: 0px;"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liDocQuestions">
                                                     <a href="/Questions/DoctorQuestionList">
-                                                        <span class="Icon Icon--questions Icon--large"></span>
+                                                        <span class="Icon Icon--questions Icon--large" style="margin-top: 0px;"></span>
                                                         <span id="unansweredQuestionCount" title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
                                                         <span class="rightpaddingdiv text"><br />Questions</span>
                                                     </a>
@@ -155,22 +155,22 @@
                                             {
                                                 <li id="liAdminQuestions">
                                                     <a href="/admin/QuestionList">
-                                                        <span class="Icon Icon--questions Icon--large"></span><span class="text"><br />Questions</span>
+                                                        <span class="Icon Icon--questions Icon--large" style="margin-top: 0px;"></span><span class="text"><br />Questions</span>
                                                     </a>
                                                 </li>
                                                 <li id="liAdminFeed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" style="margin-top: 0px;"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageTags">
                                                     <a href="/admin/managetag">
-                                                        <span class="Icon Icon--tags Icon--large"></span><span class="text"><br />Tags</span>
+                                                        <span class="Icon Icon--tags Icon--large" style="margin-top: 0px;"></span><span class="text"><br />Tags</span>
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
                                                     <a href="/Admin/Report">
-                                                        <span class="Icon Icon--reports Icon--large"></span><span class="text"><br />Reports</span>
+                                                        <span class="Icon Icon--reports Icon--large" style="margin-top: 0px;"></span><span class="text"><br />Reports</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageDoctor">
