--- a/MiraiConsultMVC/Views/Home/Contact.cshtml
+++ b/MiraiConsultMVC/Views/Home/Contact.cshtml
@@ -31,13 +31,13 @@
                             @if (ViewBag.Message != null && ViewBag.Message == "Thank you for contacting us.")
                             {
                                 <div class="wrapper-bordered alert alert-success" id="Messagediv">
-                                    <label id="lblMessage" class="success_message_color">@ViewBag.Message</label>
+                                    <label id="lblMessage" class="success_message_color msg_font">@ViewBag.Message</label>
                                 </div>
                             }
                             else if (ViewBag.Message != null && ViewBag.Message == "Failed to send email.")
                             {
                                 <div class="wrapper-bordered alert alert-error" id="Messagediv">
-                                    <label id="lblMessage" class="error_message_color">@ViewBag.Message</label>
+                                    <label id="lblMessage" class="error_message_color msg_font">@ViewBag.Message</label>
                                 </div>
                             }                          
                         </div>
