--- a/MiraiConsultMVC/Views/User/Login.cshtml
+++ b/MiraiConsultMVC/Views/User/Login.cshtml
@@ -23,7 +23,7 @@
                                         @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                                         {
                                             <div id="message" class="alert alert-error">
-                                                <label id="lblError" class="error_message_color">@ViewBag.errorMsg</label>
+                                                <label id="lblError" class="error_message_color msg_font">@ViewBag.errorMsg</label>
                                             </div>
                                         }
                                     </div>
