--- a/MiraiConsultMVC/Views/User/ResetPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ResetPassword.cshtml
@@ -15,7 +15,7 @@
                     @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                     {
                         <div id="message" class="alert alert-success">
-                            <label id="lblError" class="success_message_color">@ViewBag.errorMsg</label>
+                            <label id="lblError" class="success_message_color msg_font">@ViewBag.errorMsg</label>
                         </div>
                     }
                 </div>
