--- a/MiraiConsultMVC/Views/User/Changepassword.cshtml
+++ b/MiraiConsultMVC/Views/User/Changepassword.cshtml
@@ -26,13 +26,13 @@
                     @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                     {
                         <div id="message" class="alert alert-error">
-                            <label id="lblError" class="error_message_color">@ViewBag.errorMsg</label>
+                            <label id="lblError" class="error_message_color msg_font">@ViewBag.errorMsg</label>
                         </div>
                     }
                     @if (!String.IsNullOrEmpty(ViewBag.success))
                     {
                         <div id="message" class="alert alert-success"   >
-                            <label id="lblError" class="success_message_color">@ViewBag.success</label>
+                            <label id="lblError" class="success_message_color msg_font">@ViewBag.success</label>
                         </div>
                     }
                 </div>
