committing changes for file validation in mira-507

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -596,6 +596,7 @@
     function validateTelephone() {
         var filter = /^[0-9., [\](\) -]{8,33}$/;
         var value = $("#txtTelephoneNo").val();
+        tryNumber = 0;
         if (filter.test(value) || value.trim().length <= 0)  {
             $("#telephoneValidatior").html('');
             return true
@@ -609,6 +610,16 @@
         if (cntrl.val().length > 0)
             isValidDateofBirth(cntrl);
     })
+    $("#btnSubmit").click(function () {
+        var val = $("#ImageValidation").text();
+        tryNumber = 0;
+        if (val == "") {
+            return true;
+        }
+        else {
+            return false;
+        }
+    });
     $("#Image").change(function () {
 
         var val = $(this).val();
@@ -617,7 +628,6 @@
                 $("#ImageValidation").html("");
                 break;
             default:
-                $(this).val('');
                 $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
                 break;
         }
