--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -211,15 +211,24 @@
                 }
             }
 
-            $("#Image").change(function () {
+            $("input[type=submit]").click(function () {
+                var val = $("#ImageValidation").text();
+                tryNumber = 0;
+                if (val == "") {
+                    return true;
+                }
+                else {
+                    return false;
+                }
+            });
 
+            $("#Image").change(function () {
                 var val = $(this).val();
                 switch (val.substring(val.lastIndexOf('.') + 1).toLowerCase()) {
                     case 'gif': case 'jpg': case 'png': case 'jpeg':
                         $("#ImageValidation").html("");
                         break;
                     default:
-                        $(this).val('');
                         $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
                         break;
                 }
